2007-04-03  Laurent Sansonetti  <lsansonetti@apple.com>

	* bin/rdoc-osa:
	Do not call Config.datadir if not defined (only RubyGems defines it). 

2007-03-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa_properties.rb:
	Added :size as a shortcut to :point_size.

	* src/lib/rbosa.rb:
	- When converting an Hash object to OSA, property convert Array values ;
	- Convert type-less Float objects to OSA.

	* tests/tc_omnigraffle.rb:
	Added a test case.

2007-03-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* tc_itunes.rb:
	Updated test case to use #every.

2007-03-26  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  tests/tc_ical.rb,
	  tests/tc_textedit.rb:
	- Re-implemented the way to get all attributes of an object specifier list 
	  object, now using #every(:attribute_name) instead of #attribute_name ;
	- Updated test cases.

2007-03-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Do not fail if a description attribute has an empty value ;
	- Do not fail if a class inherits from a class that hasn't been defined yet.

	* tests/tc_ical.rb:
	Added test case.

2007-03-21  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Allow multiple enum values to be passed into the same argument, packing
	  then in an array ;
	- Merge a custom method to every application class, `activate', that sends
	  the 'misc/actv' event.

	* tests/tc_textedit.rb:
	Added test cases.

2007-03-18  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_itunes.rb,
	  tests/tc_textedit.rb,
	  src/lib/rbosa.rb:
	- Fixed 'msng' type conversions ;
	- Added the possibility to retrieve a list of attributes of a descriptor
	  list ;
	- Added Ruby <-> OSA conversions for color type ;
	- Added test cases. 

2007-03-08  Laurent Sansonetti  <lsansonetti@apple.com>

	* bin/rdoc-osa:
	Fixed the rdoc-osa tool for applications that do not have a 'name' command.

2007-03-02  Laurent Sansonetti  <lsansonetti@apple.com>
